# tou_document_parser

./: .dockerignore  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DOCKER.md  Dockerfile  FILE_INVENTORY.md  FIX_EMPTY_PAGE.md  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICKSTART_SERVER.md  README.md  README_DOCKER.md  WHERE_TO_RUN.md  build-and-deploy.sh  build-and-transfer.sh  deploy.sh  docker-compose.yml  nginx.conf  pubspec.yaml  pyproject.toml  quick-update.sh  server-deploy.sh  server.py  setup-domain.sh  start-docker.ps1  test-deployment.sh  transfer-to-server.ps1  transfer-to-server.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/tou_document_parser/: MainActivity.kt
docs/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  DEPLOY_TO_SERVER.md  DOCKER.md  FILE_INVENTORY.md  QUICKSTART.md  README_DOCKER.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main.freezed.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scripts/: build-and-deploy.sh  deploy-existing-build.sh  deploy.sh  start-docker.ps1  test-deployment.sh  transfer-to-server.ps1  transfer-to-server.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
